Extract CI tasks into separate shell scripts
This is cleaner and also allows the tasks to be
run on developer machines.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,7 @@ default:
 
 build-job:
   script:
-    - source $HOME/.profile
-    - get_idf
-    - idf.py --preview set-target esp32s3
-    - idf.py clean build
+    - Meta/build_image.sh
 
   artifacts:
     paths:
@@ -15,15 +12,4 @@ build-job:
 
 test-job:
   script:
-    - source $HOME/.profile
-    - get_idf
-    - cd test || exit
-    - idf.py --preview set-target linux
-    - idf.py clean build
-    - test_output=$(./build/test_runner.elf)
-    - echo "$test_output"
-    - n_failures=$(echo "$test_output" | grep -c ":FAIL")
-    - >
-      if (( n_failures > 0 )); then
-        exit 1
-      fi
+    - Meta/run_tests.sh linux
