--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ embassy = [
 [dependencies]
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.1", default-features = false }
+anyhow = { version = "1.0.75" }
 
 [build-dependencies]
 embuild = "0.31.3"
