Testing: Add script for running tests in CI
The script detects test failure from the output
and passes that failure on to the CI runner.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,8 @@ build-job:
     paths:
       - "target/xtensa-esp32s3-espidf/debug/cope"
 
+test-job:
+    script:
+        - source /home/esp/export-esp.sh
+        - Meta/run_tests.sh /dev/ttyACM0
 # FIXME: Figure out how to run tests on host with Rust
