--- a/esp/Cargo.toml
+++ b/esp/Cargo.toml
@@ -31,9 +31,7 @@ embassy = [
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.1", default-features = false }
 anyhow = { version = "1.0.75" }
-bitvec = { version = "1.0.1", features = ["serde"] }
-bincode = { version = "1.3.3" }
-serde = { version = "1.0.192" }
+cope = { path = "../cope" }
 
 [build-dependencies]
 embuild = "0.31.3"
