--- a/cope/Cargo.toml
+++ b/cope/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitvec = { version = "1.0.1", features = ["serde"] }
+bincode = { version = "1.3.3" }
+serde = { version = "1.0.192", features = ["derive"] }
