--- a/cope/Cargo.toml
+++ b/cope/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 bitvec = { version = "1.0.1", features = ["serde"] }
 bincode = { version = "1.3.3" }
+byte-unit = { version = "4.0.19" }
+rand = { version = "0.8.5" }
+rand_distr = { version = "0.4.3" }
 serde = { version = "1.0.192", features = ["derive"] }
