--- a/cope/Cargo.toml
+++ b/cope/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [
+    "cope_config"
+]
 
 [dependencies]
 bitvec = { version = "1.0.1", features = ["serde"] }
@@ -11,3 +15,9 @@ bincode = { version = "1.3.3" }
 rand = { version = "0.8.5" }
 rand_distr = { version = "0.4.3" }
 serde = { version = "1.0.192", features = ["derive"] }
+cope_config = { path = "cope_config"}
+
+[build-dependencies]
+serde = { version = "1.0.0", features = ["derive"] }
+toml = { version = "0.8.8" }
+cope_config = { path = "cope_config"}
