--- a/esp/Cargo.toml
+++ b/esp/Cargo.toml
@@ -31,6 +31,7 @@ embassy = [
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.1", default-features = false }
 anyhow = { version = "1.0.75" }
+byte-unit = { version = "5.0.3" }
 cope = { path = "../cope" }
 
 [build-dependencies]
