--- a/cope/cope_config/Cargo.toml
+++ b/cope/cope_config/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+macaddr = { version = "1.0.1" }
