Config: Store RX/TX Whitelist instead of single blacklist
Previously it was not really clear from the blacklist only,
which nodes were allowed to receive/transmit from other nodes.

The blacklist is now instead split into two whitelists:

1. rx_whitelist: lists which nodes may overhear packets from
   other nodes.
2. tx_whitelist: lists which nodes may send/relay packets to
   other nodes.

I used whitelists instead of blacklist, since the TrafficGenerators
need to know which receivers are valid, which is easier with a
whitelist. Functionally there is no difference.

--- a/cope/default_cfg.toml
+++ b/cope/default_cfg.toml
@@ -2,13 +2,18 @@ nodes = [
     ["A", "000000000000"],
     ["B", "000000000000"],
     ["C", "000000000000"],
-    ["D", "000000000000"],
 ]
 
 relay = "B"
 
-black_list = [
+rx_whitelist = [
+    ["A", ["B"]],
+    ["B", ["A", "C"]],
+    ["C", ["B"]],
+]
+
+tx_whitelist = [
     ["A", ["C"]],
-    ["C", ["A"]],
-    ["D", ["A", "B", "C"]],
+    ["B", ["A", "C"]],
+    ["C", ["A"]]
 ]
