Config: Make traffic generators settable for Nodes
This makes it possible that Nodes generate traffic with
different distributions and throughput.

--- a/cope/default_cfg.toml
+++ b/cope/default_cfg.toml
@@ -1,19 +1,22 @@
-nodes = [
-    ["A", "000000000000"],
-    ["B", "000000000000"],
-    ["C", "000000000000"],
-]
+nodes = [["A", "000000000000"], ["B", "000000000000"], ["C", "000000000000"]]
 
 relay = "B"
 
-rx_whitelist = [
-    ["A", ["B"]],
-    ["B", ["A", "C"]],
-    ["C", ["B"]],
-]
+rx_whitelist = [["A", ["B"]], ["B", ["A", "C"]], ["C", ["B"]]]
 
-tx_whitelist = [
-    ["A", ["C"]],
-    ["B", ["A", "C"]],
-    ["C", ["A"]]
+tx_whitelist = [["A", ["C"]], ["B", ["A", "C"]], ["C", ["A"]]]
+
+traffic_generators = [
+    [
+        "A",
+        "Poisson(4KiB)",
+    ],
+    [
+        "B",
+        "None",
+    ],
+    [
+        "C",
+        "Random(8KiB)",
+    ],
 ]
