Rewrite esp and simulator code to create nodes using Config
With this change, we have abstracted node creation completely
and moved it to the config. Before this all works, there are
some TODOs left related to MAC addresses and TrafficGenerator
improvements.

--- a/cope/cope_config/Cargo.toml
+++ b/cope/cope_config/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 macaddr = { version = "1.0.1" }
 byte-unit = { version = "5.0.3" }
+serde = { version = "1.0.192", features = ["derive"] }
