--- a/esp/Cargo.toml
+++ b/esp/Cargo.toml
@@ -34,6 +34,8 @@ anyhow = { version = "1.0.75" }
 byte-unit = { version = "5.0.3" }
 enumset = { version = "1.1.3" }
 cope = { path = "../cope" }
+# TODO: Instead re-export types inside cope crate
+cope_config = { path = "../cope/cope_config" }
 
 [build-dependencies]
 embuild = "0.31.3"
