ESP: Read base MAC address from WiFi driver
Now we can assign config entries on real hardware.

--- a/cope/default_cfg.toml
+++ b/cope/default_cfg.toml
@@ -1,4 +1,17 @@
-nodes = [["A", "000000000000"], ["B", "000000000000"], ["C", "000000000000"]]
+nodes = [
+    [
+        "A",
+        "48:27:E2:3B:32:D4",
+    ],
+    [
+        "B",
+        "000000000000",
+    ],
+    [
+        "C",
+        "000000000000",
+    ],
+]
 
 relay = "B"
 
