Change MAC addresses to ESPs of lab machines
The lab machines I used are: lab30, lab31 and lab41.

--- a/cope/default_cfg.toml
+++ b/cope/default_cfg.toml
@@ -1,4 +1,17 @@
-nodes = [["A", "000000000000"], ["B", "000000000000"], ["C", "000000000000"]]
+nodes = [
+    [
+        "A",
+        "34:85:18:B9:1B:9C",
+    ],
+    [
+        "B",
+        "34:85:18:B9:1A:D4",
+    ],
+    [
+        "C",
+        "34:85:18:B9:1B:C0",
+    ],
+]
 
 relay = "B"
 
