--- a/cope/Cargo.toml
+++ b/cope/Cargo.toml
@@ -16,6 +16,8 @@ rand = { version = "0.8.5" }
 rand_distr = { version = "0.4.3" }
 serde = { version = "1.0.192", features = ["derive"] }
 cope_config = { path = "cope_config"}
+chrono = "0.4.31"
+colored = "2.0.4"
 
 [build-dependencies]
 serde = { version = "1.0.0", features = ["derive"] }
