Node: Reimplement generators using the much nicer TGStrategy interface
This commit also ports the TimedGenerator added by Magnus to
PeriodicStrategy, which can now also be specified in the
Config.

--- a/cope/default_cfg.toml
+++ b/cope/default_cfg.toml
@@ -9,7 +9,7 @@ tx_whitelist = [["A", ["C"]], ["B", ["A", "C"]], ["C", ["A"]]]
 traffic_generators = [
     [
         "A",
-        "Poisson(4KiB)",
+        "Periodic(1s)",
     ],
     [
         "B",
@@ -17,6 +17,6 @@ traffic_generators = [
     ],
     [
         "C",
-        "Random(8KiB)",
+        "Periodic(1s)",
     ],
 ]
