--- a/cope/cope_config/Cargo.toml
+++ b/cope/cope_config/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 macaddr = { version = "1.0.1" }
 byte-unit = { version = "5.0.3" }
 serde = { version = "1.0.192", features = ["derive"] }
+parse_duration = { version = "2.1.1" }
