some coding but no gc

--- a/configs/alice_bob_cfg.toml
+++ b/configs/alice_bob_cfg.toml
@@ -1,10 +1,25 @@
-nodes = [["A", "348518b838ec"], ["B", "000000000000"], ["C", "000000000000"]]
+nodes = [
+    ["A", "348518b838ec"],
+    ["B", "000000000000"],
+    ["C", "000000000000"],
+    ["D", "000000000000"],
+]
 
 relay = "B"
 
-rx_whitelist = [["A", ["B"]], ["B", ["A", "C"]], ["C", ["B"]]]
+rx_whitelist = [
+    ["A", ["B"]],
+    ["B", ["A", "C"]],
+    ["C", ["B"]],
+    ["D", ["A", "B", "C"]]
+]
 
-tx_whitelist = [["A", ["C"]], ["B", ["A", "C"]], ["C", ["A"]]]
+tx_whitelist = [
+    ["A", ["C"]],
+    ["B", ["A", "C"]],
+    ["C", ["A"]],
+    ["D", ["A", "C"]]
+]
 
 traffic_generators = [
     [
@@ -18,5 +33,9 @@ traffic_generators = [
     [
         "C",
         "Random(1)",
+    ],
+    [
+        "D",
+        "None",
     ],
 ]
