--- a/esp/Cargo.toml
+++ b/esp/Cargo.toml
@@ -32,6 +32,7 @@ log = { version = "0.4", default-features = false }
 simple_logger = { version = "4.3.0" }
 esp-idf-svc = { version = "0.47.1", default-features = false }
 anyhow = { version = "1.0.75" }
+bincode = { version = "1.3.3" }
 bitvec = { version = "1.0.1" }
 byte-unit = { version = "5.0.3" }
 enumset = { version = "1.1.3" }
