--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 cope = { path = "../cope" }
+log = { version = "0.4", default-features = false }
+simple_logger = { version = "4.3.0" }
+anyhow = { version = "1.0.75" }
