adding configurable packet loss in simulator

--- a/simulator/Cargo.toml
+++ b/simulator/Cargo.toml
@@ -10,3 +10,4 @@ cope = { path = "../cope" }
 log = { version = "0.4", default-features = false }
 simple_logger = { version = "4.3.0" }
 anyhow = { version = "1.0.75" }
+rand = "0.8.5"
