--- a/cope/Cargo.toml
+++ b/cope/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0.192", features = ["derive"] }
 cope_config = { path = "cope_config" }
 
 [build-dependencies]
+parse_duration = { version = "2.1.1" }
 serde = { version = "1.0.0", features = ["derive"] }
 toml = { version = "0.8.8" }
 cope_config = { path = "cope_config" }
