--- a/cope/default_cfg.toml
+++ b/cope/default_cfg.toml
@@ -34,4 +34,7 @@ traffic_generators = [
     ],
 ]
 
-simulator_packet_loss = 0.1
+simulator_packet_loss = 0.0
+round_trip_time = "1.5s"
+packet_pool_size = 8
+control_packet_duration = "200ms"
