Config: Add missing fields to presets

--- a/configs/ab_magnus_cfg.toml
+++ b/configs/ab_magnus_cfg.toml
@@ -1,24 +1,12 @@
 # 34:85:18:b8:38:ec
 # 34:85:18:b8:3c:04
-nodes = [
-    ["A", "348518b838ec"],
-    ["B", "348518b83c04"],
-    ["C", "000000000000"],
-]
+nodes = [["A", "348518b838ec"], ["B", "348518b83c04"], ["C", "000000000000"]]
 
 relay = "B"
 
-rx_whitelist = [
-    ["A", ["B"]],
-    ["B", ["A", "C"]],
-    ["C", ["B"]],
-]
+rx_whitelist = [["A", ["B"]], ["B", ["A", "C"]], ["C", ["B"]]]
 
-tx_whitelist = [
-    ["A", ["C"]],
-    ["B", ["A", "C"]],
-    ["C", ["A"]],
-]
+tx_whitelist = [["A", ["C"]], ["B", ["A", "C"]], ["C", ["A"]]]
 
 traffic_generators = [
     [
@@ -34,3 +22,8 @@ traffic_generators = [
         "Periodic(1s)",
     ],
 ]
+
+simulator_packet_loss = 0.0
+round_trip_time = "1.5s"
+packet_pool_size = 8
+control_packet_duration = "200ms"
