--- a/esp/Cargo.toml
+++ b/esp/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "2"
 rust-version = "1.71"
 
 [profile.release]
-opt-level = "s"
+opt-level = 3
 
 [profile.dev]
 debug = true    # Symbols are nice and they don't increase the size on Flash
