--- a/configs/max_throughput.toml
+++ b/configs/max_throughput.toml
@@ -13,4 +13,6 @@ packet_pool_size = 8
 control_packet_duration = "200ms"
 max_retrans_amount = 2
 use_coding = false
-
+stats_log_duration = "1s"
+log_node_stats = true
+log_espnow_stats = true
